<resources>
    <string name="app_name">BasicCalculator</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="modulus">%</string>
    <string name="delete_text">DEL</string>
    <string name="divide_text">/</string>
    <string name="multiply_text">x</string>
    <string name="dot">.</string>
    <string name="zero">0</string>
    <string name="plus_text">+</string>
    <string name="minus_text">-</string>
    <string name="clear_text">CLEAR</string>
    <string name="equals_text">=</string>
    <string name="plus_minus">+/-</string>
</resources>
